# OpenCLFluid

./: .gitignore  CMakeLists.txt  Makefile  PlotData.ipynb  README.md  cl_fluid_sim.c  cl_fluid_sim.h  data.py  fluid_kernel.cl  main.c  profiler.c  sdl_window.c  sdl_window.h
include/: cl_fluid_sim.h  sdl_window.h
src/: sdl_window.c
test/: main.c  profiler.c
